[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "taogpt"
version = "0.0.1"
description = "Template-guided Autoregressive Orchestrator for General Problem Tackling"
authors = ["Winston Quock <winstonq@zillowgroup.com>"]
readme = "README.md"
packages = [{include = "taogpt", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
openai = ">=0.27.8"
langchain = ">=0.0.238"
marko = ">=2.0.0"
tiktoken = "^0.5.1"
numpy = ">1.0.0"
levenshtein = "*"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
jupyter = "^1.0.0"
pytest = "^7.4.0"

[tool.poetry.scripts]
taogpt = 'taogpt.cli:main'
