[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "taogpt"
version = "0.0.1"
description = "Template-guided Autoregressive Orchestrator for General Problem Tackling"
authors = ["Winston Quock <winstonq@zillowgroup.com>"]
readme = "README.md"
packages = [{include = "taogpt", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain = "*"
langchain-community = "*"
langchain-openai = "*"
marko = "^2.0.0"
tiktoken = "^0.6.0"
numpy = "^1.26.0"
levenshtein = "^0.25.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
jupyter = "^1.0.0"
pytest = "^7.4.0"

[tool.poetry.scripts]
taogpt = 'taogpt.cli:main'
tc = 'taogpt.tc:main'
